Bug 205057 - S0ix: First time suspend not enter s0ix - Bay trail-CR and Onda v891w
Summary: S0ix: First time suspend not enter s0ix - Bay trail-CR and Onda v891w
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Power Management
Classification: Unclassified
Component: Hibernation/Suspend (show other bugs)
Hardware: Intel Linux
: P1 normal
Assignee: Rafael J. Wysocki
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-01 03:40 UTC by youling257
Modified: 2020-06-05 16:25 UTC (History)
3 users (show)

See Also:
Kernel Version: 5.3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
[PATCH] ACPI / PM: Do not infer power-state if there are no D0 power-resources (2.46 KB, patch)
2020-06-03 19:47 UTC, Hans de Goede
Details | Diff

Description youling257 2019-10-01 03:40:29 UTC
shutdown start up enter OS, first echo freeze to suspend success, but not enter s0ix, the second time suspend will enter s0ix.
this problem happen on linux 5.3 rc1, yes, happened on kernel 5.3 two month.

Bay trail-CR device, check /sys/kernel/debug/pmc_atom/sleep_state.
Comment 1 Hans de Goede 2019-10-08 20:21:05 UTC
I can reproduce this on my Onda v891w I will investigate this further as time permits.
Comment 2 Hans de Goede 2020-06-03 19:47:57 UTC
Created attachment 289493 [details]
[PATCH] ACPI / PM: Do not infer power-state if there are no D0 power-resources

For me this patch fixes this issue.

I've also submitted this patch upstream.
Comment 3 Rafael J. Wysocki 2020-06-04 15:16:30 UTC
Here's another patch to try, please test it:

https://lore.kernel.org/linux-acpi/2226585.qILhkvVZS1@kreacher/T/#t
Comment 4 youling257 2020-06-04 16:58:31 UTC
(In reply to Rafael J. Wysocki from comment #3)
> Here's another patch to try, please test it:
> 
> https://lore.kernel.org/linux-acpi/2226585.qILhkvVZS1@kreacher/T/#t

test patch drivers/acpi/scan.c, fixed first time suspend problem.

i have another problem,about s0ix Residency time reset.
on my Bay trail v891w,have to shutdown then s0ix Residency will reset 0us.
on my Cherry trail ezpad,only need reboot then s0ix Residency will reset 0us.
Comment 5 Rafael J. Wysocki 2020-06-05 10:08:20 UTC
(In reply to youling257 from comment #4)
> (In reply to Rafael J. Wysocki from comment #3)
> > Here's another patch to try, please test it:
> > 
> > https://lore.kernel.org/linux-acpi/2226585.qILhkvVZS1@kreacher/T/#t
> 
> test patch drivers/acpi/scan.c, fixed first time suspend problem.

OK, thanks!

Here's another version of it, please test this one too:

https://patchwork.kernel.org/patch/11588155/

> i have another problem,about s0ix Residency time reset.
> on my Bay trail v891w,have to shutdown then s0ix Residency will reset 0us.
> on my Cherry trail ezpad,only need reboot then s0ix Residency will reset 0us.

I don't think that this issue is related to the one covered by this bug entry.

Please file another bug to track it properly.
Comment 6 youling257 2020-06-05 16:25:27 UTC
(In reply to Rafael J. Wysocki from comment #5)
> 
> Here's another version of it, please test this one too:
> 
> https://patchwork.kernel.org/patch/11588155/
> 
test this patch fixed first time suspend s0i3 problem.

Note You need to log in before you can comment on or make changes to this bug.